--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
     "extends": "@tsconfig/svelte/tsconfig.json",
     "compilerOptions": {
-    //     "module": "commonjs",
-    //     "declaration": true,
-    //     "removeComments": true,
-    //     "emitDecoratorMetadata": true,
-    //     "experimentalDecorators": true,
-    //     "allowSyntheticDefaultImports": true,
-    //     "target": "es2017",
-    //     "sourceMap": true,
-    //     "outDir": "./public/build/ts",
+        "removeComments": true,
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
+        "target": "es2017",
         "baseUrl": "./"
-    //     "incremental": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules/*", "public/*"],
