--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "GPLv3",
   "scripts": {
     "build": "rollup -c",
-    "start:dev": "rollup -c -w",
-    "start": "sirv public"
+    "start:dev": "rollup -c -w"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
@@ -22,9 +21,9 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^2.0.0-beta.0",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^6.1.0",
-    "sirv-cli": "^1.0.3",
     "svelte": "^3.24.0",
     "svelte-check": "^0.1.53",
     "svelte-preprocess": "^4.0.8",
