--- a/package.json
+++ b/package.json
@@ -9,25 +9,24 @@
     "start:dev": "rollup -c -w"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@tsconfig/svelte": "^1.0.2",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.4",
+    "@tsconfig/svelte": "^3.0.0",
     "material-design-lite": "^1.3.0",
-    "node-sass": "^4.14.1",
-    "rollup": "2.22.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-gzip": "^2.5.0",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^3.1.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^2.0.0-beta.0",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^6.1.0",
-    "svelte": "^3.24.0",
-    "svelte-check": "^0.1.53",
-    "svelte-preprocess": "^4.0.8",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {}
+    "node-sass": "^7.0.1",
+    "rollup": "^2.78.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-gzip": "^3.0.1",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.1",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.1",
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.7.4"
+  }
 }
