--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@rollup/plugin-typescript": "^8.3.4",
     "@tsconfig/svelte": "^3.0.0",
     "material-design-lite": "^1.3.0",
-    "node-sass": "^7.0.1",
     "rollup": "^2.78.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-gzip": "^3.0.1",
@@ -24,6 +23,7 @@
     "rollup-plugin-serve": "^2.0.1",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.54.5",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
